--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.2.0",
     "grunt-shell": "^1.1.2",
-    "jspm": "^0.16.11",
+    "jspm": "^0.15.7",
     "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
@@ -44,6 +44,11 @@
     "sinon": "^1.17.1"
   },
   "jspm": {
-    "devDependencies": {}
+    "directories": {},
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
+    }
   }
 }
