--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "dom-events-delegation",
   "version": "0.1.0",
   "description": "A JavaScript event handler micro library.",
-  "main": "dom-events.js",
+  "main": "src/index.js",
   "scripts": {
+    "lint": "eslint src/**.js",
     "test": "karma start tests/karma-travis-conf.js",
     "lcl-test": "karma start tests/karma-conf.js"
   },
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/brunoscopelliti/dom-events",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "eslint": "^3.12.2",
     "grunt-babel": "^5.0.3",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.2",
