--- a/package.json
+++ b/package.json
@@ -25,33 +25,29 @@
   },
   "homepage": "https://github.com/brunoscopelliti/dom-events",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.12.2",
+    "grunt": "1.0.1",
     "grunt-babel": "^5.0.3",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.2.0",
     "grunt-shell": "^1.1.2",
-    "jspm": "^0.15.7",
-    "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-coverage": "^0.5.2",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-qunit": "^0.1.5",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.14",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-ie-launcher": "1.0.0",
+    "karma-qunit": "1.2.1",
+    "karma-safari-launcher": "1.0.0",
+    "karma-sauce-launcher": "1.1.0",
+    "karma-webpack": "1.8.1",
     "load-grunt-tasks": "^3.3.0",
-    "qunitjs": "^1.19.0",
-    "sinon": "^1.17.1"
-  },
-  "jspm": {
-    "directories": {},
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^0.9.4"
-    }
+    "qunitjs": "^2.1.0",
+    "sinon": "2.0.0-pre.4",
+    "webpack": "^2.2.0-rc.2"
   }
 }
