--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/**.js, tests/suite/*.js",
-    "test": "karma start tests/karma-travis-conf.js",
-    "lcl-test": "karma start tests/karma-conf.js"
+    "test": "karma start karma-travis-conf.js",
+    "lcl-test": "karma start karma-conf.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.2.0",
     "grunt-shell": "^1.1.2",
+    "imports-loader": "^0.7.0",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
@@ -44,10 +45,11 @@
     "karma-qunit": "1.2.1",
     "karma-safari-launcher": "1.0.0",
     "karma-sauce-launcher": "1.1.0",
+    "karma-sinon": "^1.0.5",
     "karma-webpack": "1.8.1",
     "load-grunt-tasks": "^3.3.0",
     "qunitjs": "^2.1.0",
-    "sinon": "2.0.0-pre.4",
+    "sinon": "2.0.0-pre.5",
     "webpack": "^2.2.0-rc.2"
   }
 }
