--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": [ "es2015" ]
+    "presets": [ "es2015" ],
+    "plugins": [
+        [
+            "istanbul",
+            { "exclude": ["tests/*.js", "tests/**/*.js"] }
+        ]
+    ]
 }
