dom-events-delegation@1.0.0 ready :rocket:

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
         "qunit": true,
         "es6": true
     },
+    "globals": {
+        "sinon": true
+    },
     "extends": "eslint:recommended",
     "parserOptions": {
         "sourceType": "module"
