--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dom-events-delegation",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A JavaScript event handler micro library.",
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/**.js, tests/suite/*.js",
     "test": "karma start karma-travis-conf.js",
-    "lcl-test": "karma start karma-conf.js"
+    "lcl-test": "karma start karma-conf.js",
+    "bundle": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,18 +26,11 @@
   },
   "homepage": "https://github.com/brunoscopelliti/dom-events",
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.12.2",
-    "grunt": "1.0.1",
-    "grunt-babel": "^5.0.3",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.2.0",
-    "grunt-shell": "^1.1.2",
-    "imports-loader": "^0.7.0",
+    "babel-core": "6.21.0",
+    "babel-loader": "6.2.10",
+    "babel-plugin-istanbul": "3.0.0",
+    "babel-preset-es2015": "6.18.0",
+    "eslint": "3.12.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
@@ -45,11 +39,10 @@
     "karma-qunit": "1.2.1",
     "karma-safari-launcher": "1.0.0",
     "karma-sauce-launcher": "1.1.0",
-    "karma-sinon": "^1.0.5",
+    "karma-sinon": "1.0.5",
     "karma-webpack": "1.8.1",
-    "load-grunt-tasks": "^3.3.0",
-    "qunitjs": "^2.1.0",
+    "qunitjs": "2.1.0",
     "sinon": "2.0.0-pre.5",
-    "webpack": "^2.2.0-rc.2"
+    "webpack": "2.2.0-rc.2"
   }
 }
